@@ -3,6 +3,8 @@
 = 5.1.0 =
 * WordPress 6.8 compatible.
 * Fixed declaration of dynamic properties of the Affiliates_Pagination class.
+* Fixed translation used too early while processing constants.
+* Fixed translations used too early while determining currencies.
 
 = 5.0.0 =
 * WordPress 6.7 compatible.
